# vicon-lsl-sync

./: .gitignore  .gitmodules  README.md
.github/: dependabot.yml
.github/workflows/: build-bridge.yml
hololens-gaze-lsl/: LIBLSL_UWP_ARM64.md  README.md  build-liblsl-uwp-arm64.ps1
hololens-gaze-lsl/Assets/Scripts/: GazeClockMapping.cs  GazeCoordinateTransform.cs  GazeDataProvider.cs  GazeLSLConfig.cs  GazeLSLOutlet.cs  GazePublisherWorker.cs  GazeSample.cs  GazeStreamContract.cs  ModelTargetPoseEncoder.cs  TrackerSessionCoordinator.cs  VuforiaModelTargetPoseOutlet.cs
hololens-gaze-lsl/Tests/: HoloLensCore.Tests.csproj  Program.cs
hololens-gaze-lsl/patches/: liblsl-uwp-arm64.patch
receiver/: receive_and_align.py  requirements.txt
stream-contracts/: hololens-gaze.json
tools/: generate_stream_contracts.py
vicon-lsl-bridge/: CMakeLists.txt
vicon-lsl-bridge/assets/stair_model/: stair_model1.mtl
vicon-lsl-bridge/cmake/: FindViconDataStreamSDK.cmake
vicon-lsl-bridge/packaging/windows/: README.md  THIRD_PARTY_NOTICES.txt  collect_license_bundle.ps1  ensure_msvc_runtime.ps1  package_gui_single_exe.ps1  portable_launcher.cpp  sign_windows.ps1
vicon-lsl-bridge/src/: CommandLine.cpp  CommandLine.h  Config.h  HoloLensGazePacket.cpp  HoloLensGazePacket.h  HoloLensGazeReceiver.cpp  HoloLensGazeReceiver.h  HoloLensGazeSchema.cpp  HoloLensGazeSchema.h  MarkerStream.cpp  MarkerStream.h  SegmentStream.cpp  SegmentStream.h  StreamDefaults.h  StreamOutlet.cpp  StreamOutlet.h  StreamPushResult.h  StreamSchema.cpp  StreamSchema.h  ViconClient.cpp  ViconClient.h  ViconFrameMapper.cpp  ViconFrameMapper.h  ViconLSLBridge.cpp  ViconLSLBridge.h  main.cpp
vicon-lsl-bridge/src/gui/: BridgeWindow.cpp  BridgeWindow.h  LabRecorderClient.cpp  LabRecorderClient.h  LabRecorderRuntimePolicy.cpp  LabRecorderRuntimePolicy.h  PreviewPanel.cpp  PreviewPanel.h  PreviewStreamWorker.cpp  PreviewStreamWorker.h  PreviewWidget.cpp  PreviewWidget.h  main_gui.cpp
vicon-lsl-bridge/src/preview/: ObjMesh.cpp  ObjMesh.h  PreviewCalibration.cpp  PreviewCalibration.h  PreviewCsv.cpp  PreviewCsv.h  PreviewMath.cpp  PreviewMath.h  PreviewParsing.cpp  PreviewParsing.h  PreviewPlaybackClock.cpp  PreviewPlaybackClock.h  PreviewTypes.h  PreviewXdf.cpp  PreviewXdf.h  PreviewXdfReader.cpp  PreviewXdfReader.h
vicon-lsl-bridge/tests/: CommandLineTests.cpp  HoloLensGazePacketTests.cpp  PreviewCoreTests.cpp  StreamSchemaTests.cpp  TestMain.cpp  TestSupport.h  ViconFrameMapperTests.cpp  test_core.cpp  test_labrecorder_client.cpp  test_stream_recovery.cpp
